tests/golden/parse_errors/or_pattern_missing_rhs.cd
print match true {
  true | => "bad",
  false => "false",
};
