tests/golden/parse_errors/or_pattern_missing_rhs.err
Parse error at 2:10: expected match pattern, found FatArrow `=>`
    true | => "bad",
           ^
Parse error at 4:2: expected expression
  };
   ^
